<resources>
    <string name="app_name">MakanEnak</string>
    <string name="makan_enak">Makan Enak</string>
    <string name="e_mail">E-Mail</string>
    <string name="pass">*******</string>
    <string name="login">Login</string>
    <string name="atau">Atau</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tambahkan_makanan">Tambahkan Makanan Favorit anda</string>
    <string name="tambah">Tambah</string>
    <string name="masukan_gambar_makanan">Masukan Gambar Makanan</string>
    <string name="tambah_makanan_baru">Tambahkan Makanan Favorit Baru</string>
    <string name="img">Img</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="harga_makanan">Harga Makanan</string>
    <string name="review_makanan">Review Makanan</string>
</resources>
