<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity">

    <TextView
        android:id="@+id/t_login"
        style="@style/PageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen64"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen32"
        android:layout_marginTop="@dimen/dimen64"
        android:background="@drawable/bubble_style"
        android:elevation="@dimen/dimen10"
        android:padding="@dimen/dimen10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_login">

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:hint="@string/e_mail" />

        <View
            android:id="@+id/v_saparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/email_login"
            android:background="#E8E9E8" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_saparator"
            android:inputType="textPassword"
            android:backgroundTint="#FFF"
            android:hint="@string/pass" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen64"
        android:layout_marginHorizontal="@dimen/dimen32"
        android:layout_marginTop="@dimen/dimen64"
        android:background="@drawable/bg_rounded"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_login" />

    <TextView
        android:id="@+id/t_atau"
        style="@style/TextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen48"
        android:text="@string/atau"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:layout_editor_absoluteX="32dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen64"
        android:layout_marginHorizontal="@dimen/dimen32"
        android:layout_marginTop="@dimen/dimen48"
        android:background="@drawable/bg_rounded"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_atau" />

</androidx.constraintlayout.widget.ConstraintLayout>