<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="@dimen/dimen12"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/dimen20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/list_gambar"
                android:layout_width="@dimen/dimen100"
                android:layout_height="@dimen/dimen100"
                android:layout_marginStart="@dimen/dimen10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45"
                android:contentDescription="@string/img" />

            <TextView
                android:id="@+id/list_nama"
                android:layout_width="@dimen/dimen200"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen30"
                android:text="@string/nama_makanan"
                android:textSize="@dimen/font24"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginLeft="@dimen/dimen12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toEndOf="@id/list_gambar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/list_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_makanan"
                android:layout_marginTop="@dimen/dimen4"
                android:layout_marginLeft="@dimen/dimen12"
                android:textSize="@dimen/font16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toEndOf="@id/list_gambar"
                app:layout_constraintTop_toBottomOf="@id/list_nama" />

            <TextView
                android:id="@+id/list_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_makanan"
                android:layout_marginLeft="@dimen/dimen12"
                android:layout_marginTop="@dimen/dimen4"
                android:textSize="@dimen/font16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toEndOf="@id/list_gambar"
                app:layout_constraintTop_toBottomOf="@id/list_harga" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>